# interviews

./: CMakeLists.txt  main.cpp
leetcode/: 001_two-sum.cpp  002_add-two-numbers.cpp  003_longest-substring-without-repeating-characters.cpp  004_median-of-two-sorted-arrays.cpp  005_longest-palindromic-substring.cpp  006_zigzag-conversion.cpp  007_reverse-integer.cpp  008_string-to-integer-atoi.cpp  009_palindrome-number.cpp  010_regular-expression-matching.cpp  011_container-with-most-water.cpp  012_integer-to-roman.cpp  013_roman-to-integer.cpp  014_longest-common-prefix.cpp  015_3sum.cpp  016_3sum-closest.cpp  017_letter-combinations-of-a-phone-number.cpp  018_4sum.cpp  019_remove-nth-node-from-end-of-list.cpp  020_valid-parentheses.cpp  021_merge-two-sorted-lists.cpp  022_generate-parentheses.cpp  023_merge-k-sorted-lists.cpp  024_swap-nodes-in-pairs.cpp  025_reverse-nodes-in-k-group.cpp  026_remove-duplicates-from-sorted-array.cpp  027_remove-element.cpp  028_implement-strstr.cpp  029_divide-two-integers.cpp  030_substring-with-concatenation-of-all-words.cpp  031_next-permutation.cpp  032_longest-valid-parentheses.cpp  033_search-in-rotated-sorted-array.cpp  034_find-first-and-last-position-of-element-in-sorted-array.cpp  034_search-for-a-range.cpp  035_search-insert-position.cpp  036_valid-sudoku.cpp  037_sudoku-solver.cpp  038_count-and-say.cpp  039_combination-sum.cpp  (+387 more)
leetcode_sql/: 175_combine-two-tables.sql
mainjing_2sigma/: hash-table.cpp  number-stream.cpp  random-weight.cpp
mianJing/: factors-of-integer.cpp  full-binary-tree-num.cpp  geoLocator.cpp  sqrt-double-x.cpp
mianJing_bb/: best-time-to-buy-and-sell-stock.cpp  de_lru-lfu.cpp  design-phone-book.cpp  design-stock.cpp  largest-number.cpp  lowest-common-ancestor-of-a-binary-tree.cpp  lru.cpp  merge-k-sorted-lists.cpp  reorder-list.cpp  swap-nodes-in-pairs.cpp  valid-parentheses.cpp  validate-bst.cpp
mianJing_ebay/: binary-tree-traversal.cpp  bst-inorder-successor.cpp  excel-sheet-column-title.cpp  jump-game.cpp  kth-largest-element-in-an-array.cpp  linked-list-cycle.cpp  longest-consecutive-sequence.cpp  longest-substring-without-repeating-characters.cpp  lowest-common-ancestor-of-a-binary-tree.cpp  min-stack.cpp  number-of-islands.cpp  palindrome.cpp  partition-equal-subset-sum.cpp  repeated-substring-pattern.cpp  reverse-words-in-a-string.cpp  search-for-a-range.cpp  search-in-rotated-sorted-array.cpp  subarray-sum-equals-k.cpp  subsets.cpp  top-k-frequent-elements.cpp  ugly-number-ii.cpp  valid-anagram.cpp  validate-bst.cpp  word-break.cpp
mianJing_foursquare/: q3.cpp
mianJing_google/: AlliesAssociated.cpp  array-difference.cpp  bt-longest-path.cpp  delete-node-in-doubly-linkedlist.cpp  dice-combinations.cpp  encode-and-decode-strings.cpp  flow-free.cpp  moving-average-and-median-from-data-stream.cpp  permute-and-combine.cpp  top-k-voted-getter.cpp  typeahead.cpp  word-cover-char.cpp
mianJing_spotify/: closest_points.cpp
mianJing_twitter/: 3sum.cpp  alien-dictionary.cpp  construct-binary-tree-from-preorder-inorder-postorder-traversal.cpp  count-primes.cpp  design-hit-counter.cpp  evaluate-reverse-polish-notation.cpp  fizz-buzz.cpp  flatten-nested-list-iterator.cpp  friend-circles.cpp  implement-queue-using-stacks.cpp  insert-interval.cpp  longest-valid-parentheses.cpp  lru-lfu.cpp  minStack-maxStack.cpp  most-frequent-element.cpp  number-of-connected-components-in-an-undirected-graph.cpp  permutation-in-string.cpp  permutations.cpp  single-number.cpp  top-k-frequent-elements.cpp  unique-paths.cpp  walls-and-gates.cpp  word-search.cpp
mianjing_2sigma/: number-stream.cpp
prototype/: bits.cpp  (+18 more)
(+17 files in other folders)
